--- a/crud-tanstack-query/package.json
+++ b/crud-tanstack-query/package.json
@@ -7,13 +7,21 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "database": "json-server --watch json-server/db.json --port 3000",
+    "server": "concurrently \"npm run dev\" \"npm run database\""
   },
   "dependencies": {
+    "@tanstack/react-query": "5.22.2",
+    "axios": "1.6.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6.22.1",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "5.20.1",
+    "@tanstack/react-query-devtools": "5.24.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -21,6 +29,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "json-server": "1.0.0-alpha.23",
     "vite": "^4.4.5"
   }
 }
