--- a/crud-tanstack-query/package.json
+++ b/crud-tanstack-query/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
+  "name": "upgrading-react-query-to-v5",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,25 +11,25 @@
     "server": "concurrently \"npm run dev\" \"npm run database\""
   },
   "dependencies": {
-    "@tanstack/react-query": "5.22.2",
-    "axios": "1.6.7",
+    "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.22.1",
-    "uuid": "9.0.1"
+    "react-router-dom": "^6.8.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "5.20.1",
-    "@tanstack/react-query-devtools": "5.24.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "concurrently": "8.2.2",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@tanstack/eslint-plugin-query": "^5.17.20",
+    "@tanstack/react-query-devtools": "^5.17.19",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "json-server": "1.0.0-alpha.23",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "json-server": "^0.17.4",
+    "vite": "^5.0.8"
   }
 }
